--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,4 +89,7 @@ dependencies {
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     //chips
     implementation 'com.google.android:flexbox:1.1.0'
+
+    //dialogue
+    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
 }
