--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Jun 07 13:08:20 IST 2021
-sdk.dir=D\:\\sdk
+#Mon Jun 07 13:47:38 IST 2021
+sdk.dir=C\:\\Users\\baps\\AppData\\Local\\Android\\Sdk
