--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,5 @@ dependencies {
     //chips
     implementation 'com.google.android:flexbox:1.1.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
+    implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
 }
