--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,4 +83,8 @@ dependencies {
     //chips
     implementation 'com.google.android:flexbox:1.1.0'
     implementation 'com.alimuzaffar.lib:pinentryedittext:1.3.1'
+    //circular Imageview
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
+    //cardview
+    implementation "androidx.cardview:cardview:1.0.0"
 }
