--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,8 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.hbb20:ccp:2.4.5'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     compile 'com.google.android.gms:play-services-location:11.8.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -88,4 +90,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //cardview
     implementation "androidx.cardview:cardview:1.0.0"
+    //Scanner
+    implementation 'com.budiyev.android:code-scanner:2.1.0'
+    //Genrate qr
+    implementation 'com.github.kenglxn.qrgen:android:2.6.0'
 }
