--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,6 +71,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.hbb20:ccp:2.4.5'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
     compile 'com.google.android.gms:play-services-location:11.8.0'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
@@ -88,4 +89,12 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     //cardview
     implementation "androidx.cardview:cardview:1.0.0"
+    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    //ImageDownload
+    implementation 'com.artjimlop:altex-image-downloader:0.0.4'
+    //ImageGlide
+    implementation 'com.github.bumptech.glide:glide:4.10.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
+    implementation 'net.alhazmy13.Gota:libary:1.4.1'
+
 }
