--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,7 @@ dependencies {
     //ImageGlide
     implementation 'com.github.bumptech.glide:glide:4.10.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.10.0'
-    implementation 'net.alhazmy13.Gota:libary:1.4.1'
+//    implementation 'net.alhazmy13.Gota:libary:1.4.1'
 
     //Diman
     implementation 'com.intuit.sdp:sdp-android:1.0.6'
