--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "com.example.stocardapp"
+        applicationId "com.example.couponMobileApp"
         minSdkVersion 19
         targetSdkVersion 30
         versionCode 1
@@ -72,7 +72,7 @@ dependencies {
     implementation 'com.squareup.retrofit2:converter-gson:2.8.1'
     implementation 'com.hbb20:ccp:2.4.5'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.4.0'
-    implementation 'com.google.android.gms:play-services-auth:19.0.0'
+    implementation 'com.google.android.gms:play-services-auth:20.1.0'
     implementation 'com.google.firebase:firebase-auth:21.0.1'
     implementation 'com.google.android.gms:play-services-location:11.8.0'
     testImplementation 'junit:junit:4.+'
